testsuite/bsc.arrays/ArrayDecl_Bind_WrongSize.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling ArrayDecl_Bind_WrongSize.bsv
code generation for sysArrayDecl_Bind_WrongSize starts
Error: "ArrayDecl_Bind_WrongSize.bsv", line 5, column 38: (S0015)
  Bluespec evaluation-time error: Array was declared as length 3 but was
  initialized to length 4.
  During elaboration of `rg' at "ArrayDecl_Bind_WrongSize.bsv", line 5, column
  14.
  During elaboration of `sysArrayDecl_Bind_WrongSize' at
  "ArrayDecl_Bind_WrongSize.bsv", line 3, column 8.
